tests/tooling/fixtures/native/recovery/negative/negative_switch_signed_case_label_missing_number_minus.objc3
// Negative fixture: signed switch case labels require numeric literals after sign tokens.
// Expected diagnostic code(s): O3P103, O3P100.
module NegativeSwitchSignedCaseLabelMissingNumberMinus;

fn main() -> i32 {
  let value = 1;
  switch (value) {
    case -:
      return 1;
    default:
      return 0;
  }
}
